--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,11 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - before: |
-      curl https://github.com/grafana/k6/releases/download/v0.34.1/k6-v0.34.1-linux-amd64.tar.gz -O /tmp/k6-v0.34.1-linux-amd64.tar.gz
+  - before:
+    init: |
       mkdir ~gitpod/bin
-      tar xzvf /tmp/k6-v0.34.1-linux-amd64.tar.gz --strip-components=1 -C ~gitpod/bin
   - init: |
+      curl -L https://github.com/grafana/k6/releases/download/v0.34.1/k6-v0.34.1-linux-amd64.tar.gz -o /tmp/k6-v0.34.1-linux-amd64.tar.gz
+      tar xzvf /tmp/k6-v0.34.1-linux-amd64.tar.gz --strip-components=1 -C ~gitpod/bin
       npm install -g heroku
       pipenv install --system
       ./manage.py migrate
